initial page built out and styled

--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,15 @@
     </head>
     <body>
         <div id="container">
+            <h1>My Music</h1>
             <form class="search-form">
                 <input class="search-query" type="text" placeholder="search" />
                 <input type="submit" value="search" />
             </form>
-
+            <div>
+                <ul class="search-results">
+                </ul>
+            </div>
         </div>
         <script type="text/javascript" src="main.js"></script>
     </body>
