added more styles and finished game functionality

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
             <nav>
                 <button class="start-game">New Game</button>
             </nav>
+            <div class="scene in"><div id="game"></div></div>
             <div class="question-wrapper">
                 <p class="question"></p>
                 <form class="answer-list">
