--- a/app/index.html
+++ b/app/index.html
@@ -12,10 +12,12 @@
             </nav>
             <div class="scene in"><div id="game"></div></div>
             <div class="question-wrapper">
+                <span class="counter"></span>
                 <p class="question"></p>
                 <form class="answer-list">
                 </form>
             </div>
+            <div class="in-game-new"><button class="start-game">New Game</button></nav>
         </div>
         <script type="text/javascript" src="main.js"></script>
     </body>
